# doom-wasm

./: .envrc  .gitignore  AUTHORS.md  Makefile.am  README.md  configure.ac  doom-wasm.nix  flake.nix
.github/workflows/: gh-pages_build.yml
scripts/: build.sh  clean.sh
src/: .gitignore  Makefile.am  d_loop.c  d_loop.h  debug.h  default.cfg  i_endoom.c  i_system.c  i_timer.c  i_video.c  index.html  m_config.c  m_controls.c  m_controls.h  net_client.c  net_client.h  net_common.c  net_dedicated.c  net_gui.c  net_io.c  net_loop.c  net_query.c  net_sdl.c  net_server.c  net_websockets.c  net_websockets.h  serviceWorker.js
src/doom/: CMakeLists.txt  Makefile.am  d_main.c  d_net.c  g_game.c  hydra.h  p_map.c
src/static/: manifest.json
src/static/images/icons/: README
src/static/js/: app.js
tests/: Makefile  common.h  pthreads.c  websockets_client.c
